css/main.css
/* RESET CSS */

html, body, div, span,
h1, h2, h3, h4, h5, h6, p,
ol, ul, li,
form, label,
footer, header, nav, section {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
footer, header, nav, section {
	display: block;
}

/* CUSTOM STYLES */

html {
	position: relative;
	min-height: 100%;
}

body {
	font-family: Arial, Helvetica, sans-serif;
	font-size: 100%;
	text-align: center;
	line-height: 1;
	background-color: #f7f7f7;
	color: #333333;
}

/* LAYOUT */

#header {
	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
	background-color: #ffffff;
}

#logo {
    margin: 20px 0;
}

#search {
    padding: 30px 0;
}

/* TEXT */

a {
	color: #333333;
	text-decoration: none;
}

p {
	line-height: 1.4em;
	margin: 20px 0;
}

h2, h3 {
	margin-bottom: 20px;
}

h2 {
	font-size: 1.6rem;
}

h3 {
	font-size: 1.4rem;
}

/* MEDIAS */

img {
	max-width: 100%;
	height: auto;
}

/* FORMS */

select {
	height: 35px;
	padding: 0 10px;
    margin: 7px 3px;
    border-radius:4px;
    border: 1px solid #cccccc;
    outline: none;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
	background: #f7f7f7;
}

input[type="search"] {
	width: 100%;
	height: 50px;
	padding: 0 20px;
	border: none;
	border-radius: 4px;
	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
}

/* SEARCH */

#input-search {
	position: relative;
	width: 250px;
	margin: 0 auto;
}

#engine {
	position: absolute;
	top: 10px;
	right: 10px;
	line-height: 30px;
	width: 30px;
	height: 30px;
	border-radius: 30px;
	text-align: center;
	font-weight: bold;
}

/* LINKS */

#navbar {
	margin-top: 20px;
}

#navbar ul li {
	display: block;
	margin: 10px;
}

#navbar ul a {
	display: block;
	padding: 15px 10px;
}

/* BUTTONS */

.btn, .btn-flat {
	text-transform: uppercase;
	font-weight: bold;
}

.btn {
	border-radius: 4px;
	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
	background-color: #ffffff;
}

.btn:hover {
	background-color: #f7f7f7;
}

.btn-primary {
	color: #3498db;
}

.btn-primary:hover {
	color: #2980b9;
}

.btn-danger {
	color: #e74c3c;
}

.btn-danger:hover {
	color: #c0392b;
}

/* ABOUT */

#about-button {
	position: absolute;
	right: 20px;
	bottom: 20px;
	width: 50px;
	height: 50px;
	border-radius: 50px;
	line-height: 50px;
	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
	background-color: #ffffff;
	font-weight: bold;
}

#about-button:hover {
	background-color: #f7f7f7;
}

/* MODALS */

.modal {
	position: fixed;
	z-index: 99999;
  	top: 0;
  	right: 0;
  	bottom: 0;
  	left: 0;
  	background: rgba(0, 0, 0, 0.4);
  	opacity: 0;
  	pointer-events: none;
}

.modal:target {
  	opacity: 1;
  	pointer-events: auto;
}

.modal > div {
  	width: 85%;
  	position: relative;
	margin: 10% auto;
  	border-radius: 4px;
	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
  	background-color: #ffffff;
}

.modal-header {
	padding: 20px;
	border-radius: 4px 4px 0 0;
	text-transform: uppercase;
	font-weight: bold;
	background: #f7f7f7;
}

.modal-content {
	padding: 40px 20px;
	border-bottom: 1px solid #f7f7f7;
}

.modal-footer {
	padding: 20px;
	text-align: right;
}

/* RESPONSIVE */

@media only screen and (min-width: 35em) {
    #input-search {
	    width: 500px;
    }

    #navbar ul li {
    	display: inline-block;
    }

	.modal > div {
	  	width: 45%;
	}
}

